Made collection card responsive and fix book card buttons position on smaller screen

--- a/bibliobrowse-app/src/components/BookCard.module.css
+++ b/bibliobrowse-app/src/components/BookCard.module.css
@@ -109,6 +109,7 @@ Link {
     }
   }
   .buttons{
+    left: 214px;
     img {
       width: 26px;
       height: 26px;
